cabal-version:      3.0
name:               conway-numbers
version:            0.1
synopsis:           An implementation of Conway's surreal numbers.
-- description:
homepage:           https://github.com/alexaltair/conway-numbers
bug-reports:        https://github.com/alexaltair/conway-numbers/issues
license:            NONE
author:             Alex Altair
maintainer:         alexanderaltair@gmail.com
-- copyright:
category:           Math

library
    -- Modules exported by the library.
    exposed-modules:  Surreals

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.15.0.0,
        containers,

    -- Directories containing source files.
    hs-source-dirs:   src

    default-language: Haskell2010

test-suite conway-numbers-test
    default-language: Haskell2010

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          SurrealsTest.hs

    -- Test dependencies.
    build-depends:
        base ^>=4.15.0.0,
        conway-numbers,
        hspec,
        quickcheck-instances,
